# llm-agents-from-scratch

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  CNAME  CONTRIBUTING.md  Makefile  README.md  book_figures.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/workflows/: claude-code-review.yml  docs.yml  docs_publish.yml  lint.yml  release.yml  unit_test.yml
api_reference/errors/: index.html
capstone/: capstone_1_ch05.ipynb  capstone_1_runpod_instructions.md
capstones/one/: capstone_1.ipynb  capstone_1_ch05.ipynb  index.html
docker/runpod/: README.md  startup.sh
docs/: index.md
docs/more-examples/: index.md
docs/notebooks/: ch02.ipynb  ch03.ipynb  ch04.ipynb  ch05.ipynb  ch06.ipynb  ch07.ipynb  ch08.ipynb  first_llm_agent.ipynb  hailstone.ipynb  index.md  ollama_llm.ipynb  openai_llm.ipynb
docs/stylesheets/: extra.css
examples/: ch02.ipynb  ch03.ipynb  ch04.ipynb  ch05.ipynb  ch06.ipynb  ch07.ipynb  ch08.ipynb
extra/mcp-hailstone/: main.py  pyproject.toml
more-examples/: index.html
more-examples/ch02/: async_tools.ipynb  multi_tool_registry.ipynb  pydantic_tool_validation.ipynb
more-examples/ch03/: multi_turn_chat.ipynb  parallel_tool_calls.ipynb  pdf_extraction.ipynb
more-examples/ch04/: pokemon_comparison.ipynb  pokemon_error_handling.ipynb
notebooks/: index.html
scripts/: prepare_book_figures.py
search/: search_index.json
tests/: conftest.py  test_agent.py  test_task_handler.py
uml/: README.md
(+278 files in other folders)
